--- a/mta.yaml
+++ b/mta.yaml
@@ -9,15 +9,31 @@ modules:
   requires:
   - name: hdi-container
 
-
 - name: tinyjs
   type: nodejs
   path: tinyjs
-
+# ------- dependency on DB  
+  requires:
+  - name: tinydb
+  - name: hdi-container
+#---------------- exposes SERVICE URL to consumers
+  provides:
+    - name: tinyjs_api
+      properties:
+        service_url: ${default-url}
+# ----
 
 - name: tinyui
   type: html5
   path: tinyui
+# -- requires tinyjs service URL
+  requires:
+     - name: tinyjs_api
+       group: destinations 
+       properties:
+          name: tinyjs_be 
+          url:  ~{service_url}
+
 
 resources:
 - name: hdi-container
